--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Imports: bookdown,
     here
 Suggests: devtools,
     git2r
+URL: https://github.com/hub-shale/mypaper
+BugReports: https://github.com/hub-shale/mypaper/issues
